# pirna_ppi

./: .gitignore  Makefile  README.md  README.zh-CN.md  pixi.toml  pyproject.toml
.windsurf/rules/: code-style-guide.md
docs/: README.md  mkdocs.yml
docs/docs/: getting-started.md  index.md
notebooks/: piRNA_PPI.ipynb
pirna_ppi/: __init__.py  compare_af2_afmm.py  dataset.py  extract_known_ppi_index.py  features.py  filter_msa_by_probability.py  fix_msa.py  generate_paired_msa.py  parse_af_models.py  parse_rf2ppi_results.py  plots.py  prepare_msa_for_colabfold.py  protein_pairs.py  repeat_rf2ppi.py  run_dca.py  utils.py
pirna_ppi/modeling/: predict.py  train.py
pirna_ppi/protein_segmenter/: README.md  README_zh.md  __init__.py  cli.py  config.py  models.py  test_segmenter.py
pirna_ppi/protein_segmenter/core/: __init__.py  contact_calculator.py  segmenter.py
pirna_ppi/protein_segmenter/parsers/: __init__.py  domain_parser.py  fasta_parser.py  iprscan_parser.py  pae_parser.py  pdb_parser.py
references/: zhang_sm.txt
test/colabfold_chain_split/: README.md  analyze.py  run_test.sh  summary.json
test/colabfold_chain_split/inputs/baseline/: KWMTBOMO00189-seg1_vs_KWMTBOMO15589-seg2.a3m
test/colabfold_chain_split/inputs/fixed/: KWMTBOMO00189-seg1_vs_KWMTBOMO15589-seg2.a3m
