[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pirna_ppi"
version = "0.0.1"
description = "piRNA PPI"
authors = [
  { name = "Yongkang Guo" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["pirna_ppi"]
include = ["pyproject.toml", "pirna_ppi/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["pirna_ppi"]
force-sort-within-sections = true

